plugins {
	id 'org.springframework.boot' version '2.5.5'
	id 'io.spring.dependency-management' version '1.0.11.RELEASE'
	id 'application'
	id 'java'
}

mainClassName = 'com.desafios.soccer'

dependencies {
	implementation project(":controller")
}

allprojects {
	apply plugin: 'java'
	apply plugin: 'io.spring.dependency-management'

	group = 'com.desafios'
	version = '0.0.1-SNAPSHOT'
	sourceCompatibility = '17'

	repositories {
		mavenCentral()
	}

	dependencies {
		implementation 'org.springframework.boot:spring-boot-starter-web:2.5.6'
		implementation 'org.springframework.boot:spring-boot-starter-validation:2.5.6'
		implementation 'org.mapstruct:mapstruct:1.4.2.Final'
		implementation 'org.springframework.boot:spring-boot-starter-data-mongodb:2.5.5'
		compileOnly 'org.projectlombok:lombok:1.18.22'
		runtimeOnly 'com.h2database:h2:2.0.202'
		annotationProcessor 'org.mapstruct:mapstruct-processor:1.4.2.Final'
		annotationProcessor 'org.projectlombok:lombok:1.18.22'
		testImplementation 'org.springframework.boot:spring-boot-starter-test:2.5.6'
	}

	test {
		useJUnitPlatform()
	}

}
